# stm32-hal-eeprom

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  eeprom.c  eeprom.h
.github/workflows/: test.yml  tests.yml
testing/: CMakeLists.txt  eeprom_tests.cc  mock_hal.cc  mock_hal.h  test_main.cc
